@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.tulip" name="Tulip Routine Libraries" version="2.3.0" provider-name="Twilight0">
+<addon id="script.module.tulip" name="Tulip Routine Libraries" version="2.3.1" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.python" version="2.24.0"/>
         <import addon="script.module.kodi-six" version="0.0.2"/>
@@ -11,12 +11,13 @@
         <platform>all</platform>
         <license>GNU GENERAL PUBLIC LICENSE. Version 3, 29 June 2007</license>
         <source>https://github.com/Twilight0/script.module.tulip</source>
-        <news>
-[B]2.3.X[/B]
+        <news>[B]2.3.X[/B]
 - Add function (directory) can now set plugin category for skins to display
 - Changed all "BaseException" into "Exception"
 - Replaced builtin eval with ast.literaleval which is more secure
 - Added the fuzzywuzzy library for fuzzy string matching
+- Add function to get skin resolution
+- Moved all user agent related functions and strings into new user_agent module
 - Various other tweaks
 
 [B]2.2.X[/B]
