@@ -3,6 +3,8 @@
 - Changed all "BaseException" into "Exception"
 - Replaced builtin eval with ast.literaleval which is more secure
 - Added the fuzzywuzzy library for fuzzy string matching
+- Add function to get skin resolution
+- Moved all user agent related functions and strings into new user_agent module
 - Various other tweaks
 
 [B]2.2.X[/B]
